--- a/src/pages/CardList/CardList.css
+++ b/src/pages/CardList/CardList.css
@@ -1,16 +1,19 @@
-
-.pagination{
+.pagination {
     margin: 30px;
 }
-.pagination button{
+
+.pagination button {
     padding: 0 10px;
     margin-right: 20px;
-    margin-top:10px;
+    margin-top: 10px;
     width: 50px;
     cursor: pointer;
+    border-radius: 5px;
 
 }
-.pagination .selected{
-    background-color: rgb(43, 43, 224);
+
+.pagination .selected {
+    background-color: #6000cb;
     color: white;
+
 }
